--- a/week-3-seminar/week-3-seminar/Info.plist
+++ b/week-3-seminar/week-3-seminar/Info.plist
@@ -16,7 +16,7 @@
 					<key>UISceneDelegateClassName</key>
 					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
 					<key>UISceneStoryboardFile</key>
-					<string>PracticeDelegate</string>
+					<string>TableViewVC</string>
 				</dict>
 			</array>
 		</dict>
